--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "bube-ui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "packageManager": "pnpm@9.7.1",
   "scripts": {
+    "dev": "turbo dev --parallel",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
@@ -18,5 +14,10 @@
     "@storybook/test": "^8.2.9",
     "turbo": "^2.0.14",
     "prettier": "^3.3.3"
+  },
+  "engines": {
+    "npm": "use pnpm please!",
+    "yarn": "use pnpm please!",
+    "node": ">=20.0.0"
   }
 }
