--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "@storybook/addon-onboarding": "^8.2.9",
     "@storybook/blocks": "^8.2.9",
     "@storybook/test": "^8.2.9",
+    "prettier": "^3.3.3",
     "turbo": "^2.0.14",
-    "prettier": "^3.3.3"
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-unused-imports": "^4.1.3"
   },
   "engines": {
     "npm": "use pnpm please!",
