--- a/packages/bube-ui-react/package.json
+++ b/packages/bube-ui-react/package.json
@@ -11,6 +11,14 @@
     "storybook:dev": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix"
+    ],
+    "*.{js,ts,jsx,tsx,md,json}": [
+      "prettier --write"
+    ]
+  },
   "devDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,10 +29,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.9.0",
     "storybook": "^8.2.9",
     "typescript": "^5.5.3",
