--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "packageManager": "pnpm@9.7.1",
   "scripts": {
     "dev": "turbo dev --parallel",
+    "lint": "eslint --ext .js,.ts,.jsx,.tsx .",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "eslint --fix"
+    ],
+    "*.{js,ts,jsx,tsx,md,json}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.2.9",
@@ -12,8 +21,6 @@
     "@storybook/addon-onboarding": "^8.2.9",
     "@storybook/blocks": "^8.2.9",
     "@storybook/test": "^8.2.9",
-    "prettier": "^3.3.3",
-    "turbo": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^9.9.0",
@@ -21,7 +28,10 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-unused-imports": "^4.1.3"
+    "eslint-plugin-unused-imports": "^4.1.3",
+    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
+    "turbo": "^2.0.14"
   },
   "engines": {
     "npm": "use pnpm please!",
