--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-onboarding": "^8.2.9",
     "@storybook/blocks": "^8.2.9",
     "@storybook/test": "^8.2.9",
+    "@types/eslint": "^9.6.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
     "eslint": "^9.9.0",
@@ -29,6 +30,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-unused-imports": "^4.1.3",
+    "globals": "^15.9.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
     "turbo": "^2.0.14"
