--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@9.7.1",
   "scripts": {
     "dev": "turbo dev --parallel",
-    "lint": "eslint --ext .js,.ts,.jsx,.tsx .",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
@@ -25,12 +25,11 @@
     "@types/eslint": "^9.6.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
+    "@eslint/js": "^9.9.0",
     "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-unused-imports": "^4.1.3",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "typescript-eslint": "^8.0.1",
     "globals": "^15.9.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
