--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-links": "^8.2.9",
@@ -25,15 +26,14 @@
     "@types/eslint": "^9.6.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "@typescript-eslint/parser": "^8.2.0",
-    "@eslint/js": "^9.9.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "typescript-eslint": "^8.0.1",
     "globals": "^15.9.0",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
-    "turbo": "^2.0.14"
+    "turbo": "^2.0.14",
+    "typescript-eslint": "^8.0.1"
   },
   "engines": {
     "npm": "use pnpm please!",
