--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "eslint-plugin-unused-imports": "^4.1.3",
     "globals": "^15.9.0",
+    "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
     "prettier": "^3.3.3",
     "turbo": "^2.0.14",
