--- a/packages/bube-ui-react/package.json
+++ b/packages/bube-ui-react/package.json
@@ -11,8 +11,6 @@
     "build-storybook": "storybook build"
   },
   "devDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@chromatic-com/storybook": "^1.7.0",
     "@eslint/js": "^9.9.0",
     "@storybook/react": "^8.2.9",
@@ -20,8 +18,13 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "globals": "^15.9.0",
+    "postcss": "^8.4.41",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "storybook": "^8.2.9",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
