--- a/packages/bube-ui-react/package.json
+++ b/packages/bube-ui-react/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "pnpm storybook:dev",
+    "dev": "node src/styles/convertVariables.js && pnpm storybook:dev",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "storybook:dev": "storybook dev -p 6006",
